--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,1 +1,61 @@
 {% extends "base_template.html" %}
+{% load static %}
+
+    {% block title %}
+        <title>Pé Confortavel</title>
+    {% endblock %}
+
+
+
+            {% block menu %}
+            <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
+                <div class="navbar-nav">
+                    <a href="/" class="nav-link">Início</a>
+                </div>
+            </div>
+        </nav>
+            {%  endblock %}
+
+            
+        {% block titulo_pagina %}
+        
+        
+        {% endblock %}
+
+        {% block corpo %}
+        <main class="container m-2 w-75 mx-auto my-font-family">
+
+    <div class="hero">
+        <div class="col text-center m-0">
+            <h1 class="mt-2 mb-5 my-h2">Login</h1>
+        </div>
+    </div>
+
+    <section class="hero">
+        <form name="frmContato" action="" method="post" class="my-label-color-purple">
+            {% csrf_token %}
+            
+            <!-- Full Name -->
+            <div class="row mb-4">
+                <div class="col-12">
+                    <label for="idUsuario" class="form-label">Usúario</label>
+                    <input class="form-control form-control-lg" type="text" id="idUsuario" name="Usuario" 
+                           placeholder="Digite seu Usúario" maxlength="100" required>
+                </div>
+            </div>
+        
+            <!-- Contact Info (Email and Phone) -->
+            <div class="row mb-4">
+                <div class="col-12">
+                <label for="idSenha" class="form-label">Senha</label>
+                <div class="input-group">
+                    <input class="form-control" type="password" id="idSenha" name="senha" 
+                           placeholder="Digite sua senha" maxlength="256" required>
+                </div>
+              </div>
+            </div>    
+        </form>
+        
+
+    </section>
+    {% endblock %}
